@@ -1,3 +1,7 @@
+2003-10-04
+	* document expiration times in POD (thanks to Tim Bunce
+	  for noting the omission)
+	
 2003-10-03
 	* add connect timeout of 0.25s, for dead host detection.
 	  We had 1 second a couple revs ago, but lost it when
